-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.5.0, Lustre 2.6.0
-
3
-
12049
This really only affects ZFS, because zfs does not update # of blocks until the blocks are flushed to disk, so after an OST_WRITE, the number of blocks only reflect the number on disk, but that number is updated after an OST_SYNC RPC (which returns the correct number of blocks, but is ignored by the client code).
Test: (on a ZFS backed setup)
1. client1$ dd if=/dev/zero of=/mnt/lustre/test oflag=sync bs=1M count=2
2. client1$ stat /mnt/lustre/test
3. client2$ stat /mnt/lustre/test OR clear locks on client1 and redo stat
4. See that the number of blocks is incorrect on client1 (client2 has correct value)