LU-4389 clio: update file attributes after sync

This really only affects ZFS, because zfs does not update # of blocks
until the blocks are flushed to disk.

This patch update file's attributes after OST_SYNC completes.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I2b62dff5acda2984f60d5ed5df4ad19144cd6829